# hardseal-occam

./: .gitignore  LICENSE  NOTICE.md  README.md  kaggle_submission.ipynb  kernel-metadata.json  pyproject.toml
LICENSES/: Apache-2.0-hardseal-trace.txt
hardseal_occam/: __init__.py  runner.py  tracer_callback.py
hardseal_trace/: __init__.py
occam_upstream/: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
occam_upstream/solver/: action_ranker.py  benchmark.py  context_compression.py  environments.py  events.py  orchestrator.py  priority_tiers.py  replay_explorer.py  rhae.py  state_graph.py
occam_upstream/tests/: test_benchmark.py  test_events.py  test_runner.py  test_server.py  test_solver.py
occam_upstream/viewer/: cli.py  runner.py  server.py
occam_upstream/viewer/static/: index.html
traces/: kaggle_summary.json  kaggle_summary_v7.json  submission.parquet  submission_v9_savemode.parquet  summary.json
